documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API VOID __stdcall C41_MemWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Mod(ULONG moda,ULONG modb);

C41W32API USHORT __stdcall C41_MsgAddr(INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgArincPeek(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgArincPoke(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgDisable(INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgEnable(INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgEncoderPeek(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgEncoderPoke(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgReset(HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Mul(ULONG mula,ULONG mulb);

C41W32API VOID __stdcall C41_NormalMant(LPLONG mant,LPINT exp);

C41W32API USHORT __stdcall C41_PortRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_PortWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_ProgRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_ProgWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_RAMRdB(ULONG addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_RAMRdL(ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_RAMRdW(ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_SchedAddr(INT schindex,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedClear(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedFixedGap(USHORT gapval,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedInsert(USHORT schflag,USHORT schopcode,USHORT schoperand,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedNop(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedRd(LPUSHORT valueptr,INT schindex,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedUser(USHORT useraddr,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedWipe(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedWr(LPUSHORT valueptr,INT schindex,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqInterval(INT interval,HCARD handleval);

C41W32API BOOL __stdcall C41_SeqIsRunning(HCARD handleval);

C41W32API ULONG __stdcall C41_SeqRdEx(LPUSHORT buf,ULONG bufcount,HCARD handleval);

C41W32API USHORT __stdcall C41_SeqStart(HCARD handleval);

C41W32API USHORT __stdcall C41_SeqStop(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Shl(ULONG dataval,USHORT cntval);

C41W32API ULONG __stdcall C41_Shr(ULONG dataval,USHORT cntval);

C41W32API USHORT __stdcall C41_SignMant(LPCSTR str);

C41W32API INT __stdcall C41_ValAsciiCmpi(LPSTR str1,LPSTR str2);

C41W32API LPSTR __stdcall C41_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

C41W32API VOID __stdcall C41_ValAsciiTrimLead(LPSTR buf);

C41W32API VOID __stdcall C41_ValAsciiTrimTrail(LPSTR buf);

C41W32API ULONG __stdcall C41_ValFromAscii(LPCSTR asciistr,INT radixval);

C41W32API LPSTR __stdcall C41_ValIncAscii(LPSTR asciistr);

C41W32API LPSTR __stdcall C41_ValInccAscii(LPSTR asciistr);

C41W32API BOOL __stdcall C41_ValIsLower(INT value);

C41W32API INT __stdcall C41_ValLenAscii(INT numbits,INT radixval);