documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS

        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MemWipe(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Mod(UInt32 moda, UInt32 modb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MsgAddr(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgArincPeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MsgArincPeek(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgArincPoke@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MsgArincPoke(UInt32 msgval, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgDisable(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgEnable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgEnable(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgEncoderPeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MsgEncoderPeek(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgEncoderPoke@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MsgEncoderPoke(UInt32 msgval, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgReset(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_MsgWipe(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_NormalMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_NormalMant(ref Int32 mant, ref Int32 exp);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_PortRd(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_PortWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ProgRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ProgRd(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ProgWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ProgWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_RAMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_RAMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_SchedAddr(Int32 schindex, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedClear(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedFixedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedFixedGap(UInt16 gapval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedInsert@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedInsert(UInt16 schflag, UInt16 schopcode, UInt16 schoperand, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedNop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedNop(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedRd(ref UInt16 valueptr, Int32 schindex, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedUser@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedUser(UInt16 useraddr, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedWipe(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SchedWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SchedWr(ref UInt16 valueptr, Int32 schindex, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqInterval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SeqInterval(Int32 interval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SeqIsRunning(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_SeqRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_SeqStart(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_SeqStop(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SeqWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_SeqWipe(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Shl(UInt32 dataval, UInt16 cntval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Shr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Shr(UInt32 dataval, UInt16 cntval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_SignMant@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_SignMant(ref string str);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValAsciiCmpi@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ValAsciiCmpi(ref string str1, ref string str2);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValAsciiCpy@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ValAsciiCpy(ref string strdest, ref string strsrc, Int32 count);
        public static string C41_ValAsciiCpy(ref string strdest, ref string strsrc, Int32 count) { return Marshal.PtrToStringAnsi(_C41_ValAsciiCpy(ref strdest, ref strsrc, count)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValAsciiTrimLead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ValAsciiTrimLead(ref string buf);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValAsciiTrimTrail@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ValAsciiTrimTrail(ref string buf);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValFromAscii@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_ValFromAscii(ref string asciistr, Int32 radixval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValIncAscii@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ValIncAscii(ref string asciistr);
        public static string C41_ValIncAscii(ref string asciistr) { return Marshal.PtrToStringAnsi(_C41_ValIncAscii(ref asciistr)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValInccAscii@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ValInccAscii(ref string asciistr);
        public static string C41_ValInccAscii(ref string asciistr) { return Marshal.PtrToStringAnsi(_C41_ValInccAscii(ref asciistr)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValIsLower@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ValIsLower(Int32 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValLenAscii@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ValLenAscii(Int32 numbits, Int32 radixval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ValToAscii@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ValToAscii(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval);
